# rust-api

./: .env  Cargo.toml  Dockerfile  diesel.toml
migrations/2022-08-04-215749_model/: down.sql  up.sql
src/auth/: auth.rs
src/database/: database.rs
src/mod/: mod.rs
src/models/: Admin.rs  Host.rs  Privacy.rs
src/schema/: schema.rs
