[package]
name = "pip"
version = "0.1.0"
edition = "2021"
author = ["Jason YT <jason@chatr.fr>"]
features = ["extension-module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
actix-web = "4"
actix-rt = "2.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
listenfd = "1.0.0"
r2d2 = "0.8.10"
uuid = "1.1.2"
jwt = "0.16.0"
rust-crypto = "0.2.36"
bcrypt = "0.13.0"